# DSA_Project_C-

DSA_Project_C++/DSA_Project/: CMakeLists.txt  adminhistory.cpp  adminhistory.h  adminhistory.ui  adminlogin.cpp  adminlogin.h  adminlogin.ui  adminpage.cpp  adminpage.h  adminpage.ui  adminregstd.cpp  adminregstd.h  adminregstd.ui  adminverlaundry.cpp  adminverlaundry.h  adminverlaundry.ui  databaseheader.h  databasemanager.cpp  databasemanager.h  kathiadminlogin.cpp  kathiadminlogin.h  kathiadminlogin.ui  kathiadminpage.cpp  kathiadminpage.h  kathiadminpage.ui  kathiadminpendingorder.cpp  kathiadminpendingorder.h  kathiadminpendingorder.ui  kathiadminvieworders.cpp  kathiadminvieworders.h  kathiadminvieworders.ui  kathihomepage.cpp  kathihomepage.h  kathihomepage.ui  kathiorderingpage.cpp  kathiorderingpage.h  kathiorderingpage.ui  laundryclothesstd.cpp  laundryclothesstd.h  laundryclothesstd.ui  (+9 more)
DSA_Project_C++/DSA_Project/database/: DSAProject.db  DSAProject.sqbpro
